--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,40 @@
     "divclick",
     "divcount",
     "divcreate",
+    "diveight",
+    "diveleven",
+    "divfifteen",
+    "divfive",
+    "divfour",
+    "divfourteen",
+    "divnine",
     "divone",
     "divselector",
+    "divseven",
+    "divsix",
+    "divten",
+    "divthirteen",
+    "divthree",
+    "divtwelve",
+    "divtwo",
     "divv",
     "mainn",
     "numbercount",
-    "removebutton"
+    "removebutton",
+    "removeeight",
+    "removeeleven",
+    "removefifteen",
+    "removefive",
+    "removefour",
+    "removefourteen",
+    "removenine",
+    "removeone",
+    "removeseven",
+    "removesix",
+    "removeten",
+    "removethirteen",
+    "removethree",
+    "removetwelve",
+    "removetwo"
   ]
 }
